# ClawGUI

./: .gitignore  CONTRIBUTING.md  README.md  README_zh.md
opengui-eval/: README.md  README_zh.md  main.py  ppt_plot.py  pyproject.toml
opengui-eval/data/: convert_any_models.py  mmbench-gui-guig2.json  mmbench-gui-stepgui.json  mmbench-gui-uitars.json  mmbench-gui-uivenus15.json  mmbench-gui.json  osworld-g-guig2.json  osworld-g-guiowl15.json  osworld-g-maiui.json  osworld-g-qwen25vl.json  osworld-g-qwen3vl.json  osworld-g-stepgui.json  osworld-g-uitars.json  osworld-g-uivenus15.json  osworld-g.json  screenspot-pro-guig2.json  screenspot-pro-guiowl15.json  screenspot-pro-maiui.json  screenspot-pro-qwen25vl.json  screenspot-pro-qwen3vl.json  screenspot-pro-stepgui.json  screenspot-pro-uitars.json  screenspot-pro-uivenus15.json  screenspot-pro.json  screenspot-v2-guig2.json  screenspot-v2-guiowl15.json  screenspot-v2-maiui.json  screenspot-v2-qwen25vl.json  screenspot-v2-qwen3vl.json  screenspot-v2-stepgui.json  screenspot-v2-uitars.json  screenspot-v2-uivenus15.json  screenspot-v2.json  uivision-guig2.json  uivision-stepgui.json  uivision-uitars.json  uivision-uivenus15.json  uivision.json
opengui-eval/inference/: __init__.py  base_inferencer.py  guig2_inferencer.py  guiowl15_inferencer.py  maiui_inferencer.py  qwen25vl_inferencer.py  qwen3vl_inferencer.py  stepgui_inferencer.py  uitars_inferencer.py  uivenus15_inferencer.py
opengui-eval/judge/: __init__.py  base_judge.py  grounding_judge.py  osworld_g_judge.py
opengui-eval/metric/: __init__.py  base_metric.py  (+2 more)
(+143 files in other folders)
